# axum_live

./: Cargo.toml  README.md
examples/: quick_dev.rs
src/: error.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
