[package]
name = "axum_live"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["tokio", "http1", "macros"] }
lazy-regex = "3.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.1", features = ["fs"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.0"
